# OGAL

./: .gitignore  CMakeLists.txt  README.md
include/: OGAL.hpp  event.hpp  program.hpp  render_list.hpp  renderable.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
include/shapes/: equilateral_triangle.hpp  line.hpp  square.hpp
lib/include/OGAL/: OGAL.hpp  event.hpp  program.hpp  renderable.hpp  shader.hpp  stb_image.h  texture.hpp  texture_3d.hpp  vao.hpp  vbo.hpp
lib/include/OGAL/shapes/: curve.hpp  equilateral_triangle.hpp  line.hpp  square.hpp
lib/src/: OGAL.cpp  program.cpp  renderable.cpp  shader.cpp  texture.cpp  texture_3d.cpp  vao.cpp  vbo.cpp
lib/src/shapes/: curve.cpp  equilateral_triangle.cpp  line.cpp  square.cpp
run/: OGAL  OGLAL
src/: OGAL.cpp  main.cpp  program.cpp  render_list.cpp  renderable.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
src/shapes/: equilateral_triangle.cpp  line.cpp  square.cpp
test/src/: main.cpp
